
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int statement_list_t ;


 int PACKAGE_VERSION ;
 int error (char*,int ) ;
 scalar_t__ fopen (int ,char*) ;
 int input_name ;
 int print_proxy (char*,...) ;
 scalar_t__ proxy ;
 int proxy_name ;

__attribute__((used)) static void init_proxy(const statement_list_t *stmts)
{
  if (proxy) return;
  if(!(proxy = fopen(proxy_name, "w")))
    error("Could not open %s for output\n", proxy_name);
  print_proxy( "/*** Autogenerated by WIDL %s from %s - Do not edit ***/\n", PACKAGE_VERSION, input_name);
  print_proxy( "\n");
  print_proxy( "#define __midl_proxy\n\n");

  print_proxy( "#ifdef __REACTOS__\n");
  print_proxy( "#define WIN32_NO_STATUS\n");
  print_proxy( "#define WIN32_LEAN_AND_MEAN\n");
  print_proxy( "#endif\n\n");

  print_proxy( "#include \"objbase.h\"\n");
  print_proxy( "\n");
  print_proxy( "#ifndef DECLSPEC_HIDDEN\n");
  print_proxy( "#define DECLSPEC_HIDDEN\n");
  print_proxy( "#endif\n");
  print_proxy( "\n");
}
