; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_proxy.c_init_proxy.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_proxy.c_init_proxy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@proxy = common dso_local global i64 0, align 8
@proxy_name = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"Could not open %s for output\0A\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"/*** Autogenerated by WIDL %s from %s - Do not edit ***/\0A\00", align 1
@PACKAGE_VERSION = common dso_local global i32 0, align 4
@input_name = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.4 = private unnamed_addr constant [23 x i8] c"#define __midl_proxy\0A\0A\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"#ifdef __REACTOS__\0A\00", align 1
@.str.6 = private unnamed_addr constant [25 x i8] c"#define WIN32_NO_STATUS\0A\00", align 1
@.str.7 = private unnamed_addr constant [29 x i8] c"#define WIN32_LEAN_AND_MEAN\0A\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"#endif\0A\0A\00", align 1
@.str.9 = private unnamed_addr constant [22 x i8] c"#include \22objbase.h\22\0A\00", align 1
@.str.10 = private unnamed_addr constant [25 x i8] c"#ifndef DECLSPEC_HIDDEN\0A\00", align 1
@.str.11 = private unnamed_addr constant [25 x i8] c"#define DECLSPEC_HIDDEN\0A\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"#endif\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @init_proxy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_proxy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i64, i64* @proxy, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %29

6:                                                ; preds = %1
  %7 = load i32, i32* @proxy_name, align 4
  %8 = call i64 @fopen(i32 %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i64 %8, i64* @proxy, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %6
  %11 = load i32, i32* @proxy_name, align 4
  %12 = call i32 @error(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %10, %6
  %14 = load i32, i32* @PACKAGE_VERSION, align 4
  %15 = load i32, i32* @input_name, align 4
  %16 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0), i32 %14, i32 %15)
  %17 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %18 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.4, i64 0, i64 0))
  %19 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0))
  %20 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.6, i64 0, i64 0))
  %21 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.7, i64 0, i64 0))
  %22 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0))
  %23 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.9, i64 0, i64 0))
  %24 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %25 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.10, i64 0, i64 0))
  %26 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.11, i64 0, i64 0))
  %27 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i64 0, i64 0))
  %28 = call i32 (i8*, ...) @print_proxy(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %29

29:                                               ; preds = %13, %5
  ret void
}

declare dso_local i64 @fopen(i32, i8*) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @print_proxy(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
